gtk+3.0 (3.1.18-0ubuntu2) UNRELEASED; urgency=low

  * Add 101_gdkenumtypes.c_location.patch: Always generate gdk/gdkenumtypes.c
    in the source tree, and fix path in the introspection sources. With this,
    gdkenumtypes.c is correctly included with separate build trees, too. This
    fixes missing GTypes in the .gir when using a separate build tree.
    (LP: #769256)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Sep 2011 10:24:11 +0200

gtk+3.0 (3.1.18-0ubuntu1) oneiric; urgency=low

  * New upstream release.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 06 Sep 2011 09:21:59 +0200

gtk+3.0 (3.1.16-0ubuntu2) oneiric; urgency=low

  * debian/control.in: Move gtk-doc-tools from B-D-I to B-D, to avoid having
    to add a dynamic "i386 or not" check to debian/rules.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 05 Sep 2011 13:39:09 +0200

gtk+3.0 (3.1.16-0ubuntu1) oneiric; urgency=low

  * New upstream release.
  * Port debian/patches/043_ubuntu_menu_proxy.patch for new upstream version.
  * Unfuzz patches.
  * debian/control.in: Bump libatk1.0-dev build dependency as per upstream
    configure.ac.
  * Drop 101_css_provider_load_from_data_crash.patch, applied upstream.
  * debian/rules: Explicitly build with --enable-gtk-doc for shared build.
  * debian/libgtk-3-0.symbols: Add new symbols from this release.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 05 Sep 2011 13:01:21 +0200

gtk+3.0 (3.1.12-0ubuntu2) oneiric; urgency=low

  * debian/patches/101_css_provider_load_from_data_crash.patch:
    - Fix crash when passing load_from_data a length argument, as the
      Python bindings do.  LP: #831812

 -- Michael Terry <mterry@ubuntu.com>  Thu, 25 Aug 2011 14:52:16 -0400

gtk+3.0 (3.1.12-0ubuntu1) oneiric; urgency=low

  * New upstream version, clean patches backported from git
  * debian/control.in: 
    - updated gdk-pixbuf requirement
  * debian/rules:
    - updated shlibs version
  * debian/libgtk-3-0.symbols:
    - new version update