@@ -1,1 +1,1 @@
-debian/install/shared/usr/share/gtk-doc/html/gail* usr/share/gtk-doc/html
+docs/reference/libgail-util/html/* usr/share/gtk-doc/html/gail-libgail-util3
